--- a/src/Components/BCWeeklyList/BCWeeklyList.scss
+++ b/src/Components/BCWeeklyList/BCWeeklyList.scss
@@ -1,5 +1,26 @@
+@import '../../semantic-overides.scss';
+
 .BCWeeklyList {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: auto 100px;
+  
+  @media (max-width: $phone-width) { 
+    margin: auto 20px;
+  }
+
+  .BCWeeklyList-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    justify-content: center;
+    grid-row-gap: 30px;
+    
+    @media (max-width: $tablet-width) { 
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    @media (max-width: $phone-width) { 
+      grid-template-columns: 1fr;
+    }
+    
+  }
 }
