--- a/src/Components/BottomNav/BottomNavOld.scss
+++ b/src/Components/BottomNav/BottomNavOld.scss
@@ -1,4 +1,4 @@
-@import '../../semantic-overides.scss';
+@import '../../globals.scss';
 
 .item.App-bottom-nav-track-info {
 	background: $bc-black;
