--- a/src/Old/TrackItem/TrackItem.scss
+++ b/src/Old/TrackItem/TrackItem.scss
@@ -1,4 +1,4 @@
-@import '../../semantic-overides.scss';
+@import '../../globals.scss';
 
 .ui.tiny.statistic.TrackList-selection-count:hover {
     cursor: default;
