--- a/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
+++ b/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
@@ -1,7 +1,7 @@
-@import '../../semantic-overides.scss';
+@import '../../globals.scss';
 
 .BCWeeklyTracklist {
-  margin-top: 30px;
+  // margin-top: 30px;
 
   .BCWeeklyTracklist-item {
     &:hover {
