--- a/src/Components/TopNav/top_nav.scss
+++ b/src/Components/TopNav/top_nav.scss
@@ -1,9 +1,17 @@
+@import '../../globals.scss';
+
 .TopNav {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   height: 80px;
   position: absolute;
   z-index: 1;
+  // margin: 15px 25px;
   width: 100%;
+
+  @media (max-width: $phone-width) {
+    // margin: 0;
+    justify-content: center;
+  }
 }
