--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,10 +1,16 @@
 $font-1: 'Open Sans', sans-serif;
 $bc-white: #f3f3f3;
-$bg-color-1: #191925;
 $bc-purple: #6255ff;
 $bc-gray: #626970;
 $bc-gray-2: #262632;
+$bottom-nav-height: 80px;
+
+
+// bottom nav
 $bc-black: #22222e;;
+
+// background
+$bc-black-1: #191925;
 $bc-pink: #e54ea3;
 
 $desktop-width: 1200px;
