a bit of animating

--- a/src/Components/BCLoading/BCLoading.scss
+++ b/src/Components/BCLoading/BCLoading.scss
@@ -1,12 +1,6 @@
 .BCLoading {
+    // TODO: make this height adapt to screen height
     height: 1000px;
-    // border: solid 5px red;
     display: flex;
     justify-content: center;
-    .BCLoading-icon-container {
-        .BCLoading-icon {
-            width: 200px;
-        }
-    }
-    
 }
