--- a/src/Components/BCSpotlightItem/BCSpotlightItem.scss
+++ b/src/Components/BCSpotlightItem/BCSpotlightItem.scss
@@ -1,19 +1,13 @@
 .BCSpotlightItem {
   height: 550px;
-
   display: grid;
-
   justify-content: center;
-
   justify-items: center;
-
   justify-self: center;
-
   align-content: center;
-
   align-items: center;
-
   align-self: center;
+  margin-bottom: 3rem;
 
   grid-template-columns: 1fr 1fr;
   .BCSplotlightItem-cover {
