--- a/src/Components/BCWeeklyItem/BCWeeklyItem.scss
+++ b/src/Components/BCWeeklyItem/BCWeeklyItem.scss
@@ -1,19 +1,18 @@
 @import "../../globals.scss";
 
-$item-width: 250px;
+// $item-width: 250px;
 
 .BCWeeklyItem {
   // margin: 40px;
 
   // calculated based on media query
 
-  width: $item-width;
-  height: $item-width;
+  // width: $item-width;
+  // height: $item-width;
 
   @media (max-width: $phone-width) {
     width: 100%;
     height: auto;
-    // height: 600px;
   }
 
   .BCWeeklyItem-cover {
