--- a/src/Components/BCSpotlightItem/BCSpotlightItem.scss
+++ b/src/Components/BCSpotlightItem/BCSpotlightItem.scss
@@ -1,5 +1,6 @@
+@import "../../globals.scss";
+
 .BCSpotlightItem {
-  height: 550px;
   display: grid;
   justify-content: center;
   justify-items: center;
@@ -8,6 +9,14 @@
   align-items: center;
   align-self: center;
   margin-bottom: 3rem;
+  width: 1100px;
+
+  @media (max-width: $tablet-width) {
+    width: 100%;
+    // min-width: 950px;
+    // border: 2px solid red;
+    // top: 60px;
+  }
 
   grid-template-columns: 1fr 1fr;
   .BCSplotlightItem-cover {
