--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -9,34 +9,39 @@
     text-decoration: underline;
     &:hover {
       cursor: pointer;
-      opacity: 1.0;
+      opacity: 1;
     }
   }
   // https://css-tricks.com/tinted-images-multiple-backgrounds/
   .SplashBanner-image-container {
-    height: 300px;
-    background: linear-gradient(to bottom, rgba(25, 25, 37, 0), #191925),
-      url(https://source.unsplash.com/FhdC7RGb5Yg/);
-      // why don't these work?
-    // background-repeat: no-repeat;
-    // background-position: center center;
+    max-height: 400px;
+    min-height: 300px;
 
+    .SplashBanner-image {
+      width: 100%;
+      height: auto;
+    }
   }
+
   .SplashBanner-content {
     position: absolute;
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: center;
-    top: 100px;
+    top: 50px;
     flex-direction: column;
+
+    @media (max-width: $phone-width) {
+      top: 45px;
+    }
 
     .SplashBanner-message-container {
       @include bc-text();
       text-align: center;
       display: flex;
       align-items: center;
-      height: 100px;
+      height: 150px;
       justify-content: space-evenly;
       flex-direction: column;
 
@@ -58,8 +63,6 @@
     }
 
     .SplashBanner-form-container {
-
-      
       .SplashBanner-email-container {
         position: relative;
 
@@ -71,7 +74,6 @@
           width: 300px;
           background: #242a3b;
           padding-left: 20px;
-          
         }
 
         .SplashBanner-arrow-container {
