--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -20,6 +20,8 @@
     .SplashBanner-image {
       width: 100%;
       height: auto;
+      max-height: 300px;
+      // MAKE THIS NOT LOOK ALL SQUISHED
     }
   }
 
