--- a/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
+++ b/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
@@ -4,6 +4,7 @@
   // margin-top: 30px;
 
   .BCWeeklyTracklist-item {
+    letter-spacing: -0.4px;
     opacity: 0.8;
     position: relative;    
 
