hack out changes with alex, using new api ability to accept to week_num arg to just reroute to /weekly and be on latest playlist

--- a/src/Components/BCLogo/bc_logo.scss
+++ b/src/Components/BCLogo/bc_logo.scss
@@ -1,12 +1,15 @@
 @import '../../globals.scss';
 
 .BCLogo {
+  // border: 1px solid red;
+  
   &:hover{
     cursor: pointer;
   }
 
   display: flex;
   align-items: center;
+ 
   margin: 15px 25px;
 
 
@@ -22,8 +25,16 @@
 
   @media (max-width: $phone-width) {
     flex-direction: column;
+    margin-top: 24px;
+    
+    .BCLogo-svg {
+      width: 64px;
+      padding-right: 8px;
+    }
+    
     .BCLogo-text {
       margin: 0;
+      margin-top: 8px;
     }
   }
 }
