--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -36,6 +36,8 @@
 
     @media (max-width: $phone-width) {
       top: 45px;
+
+   
     }
 
     .SplashBanner-message-container {
@@ -43,8 +45,9 @@
       text-align: center;
       display: flex;
       align-items: center;
-      height: 150px;
-      justify-content: space-evenly;
+      height: 120px;
+      margin-top: 1rem;
+      // justify-content: space-evenly;
       flex-direction: column;
 
       .SplashBanner-message-header {
@@ -53,8 +56,24 @@
 
       .SplashBanner-message-subheader {
         letter-spacing: 2.14px;
+        margin-top: 2rem;
         line-height: 14px;
         font-size: 13px;
+      }
+      @media (max-width: $phone-width) {
+        justify-content: initial;
+        margin-top: 4rem;
+        height: 80px;
+        
+        .SplashBanner-message-header {
+          font-size: 2rem;
+        }
+
+        .SplashBanner-message-subheader {
+          font-size: 1rem;
+          letter-spacing: 2.0px;
+          margin-top: 1rem;
+        }
       }
     }
 
@@ -81,11 +100,11 @@
         .SplashBanner-arrow-container {
           position: absolute;
           display: flex;
-          right: 6px;
+          right: 3px;
           top: 3px;
           padding: 5px;
           width: 20px;
-          height: 20px;
+          height: 21px;
           background: rgba(255, 255, 255, 0.1);
           border-radius: 50px;
           justify-content: center;
