--- a/src/globals.scss
+++ b/src/globals.scss
@@ -16,6 +16,9 @@ $bc-pink: #e54ea3;
 $desktop-width: 1280px;
 $tablet-width: 1150px;
 $phone-width: 950px;
+$tiny-width: 320px;
+
+$transition: opacity 0.2s ease-in-out;
 
 @mixin bc-text($font-weight: normal) {
   font-family: $font-1;
