--- a/src/Components/BCLoading/BCLoading.scss
+++ b/src/Components/BCLoading/BCLoading.scss
@@ -1,6 +1,6 @@
 .BCLoading {
     // TODO: make this height adapt to screen height
-    height: 1000px;
+    height: 30vh;
     display: flex;
     justify-content: center;
     margin-top: 10rem;
