--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -10,8 +10,8 @@
     color: $bc-gray;
   }
 
-  span {
-    padding: 0 15px 0 15px;
+  .Footer-left, .Footer-right {
+    padding: 0 1rem 0 1rem;
   }
 }
 
