we got a seek bar

--- a/src/Components/BottomNav/PlayerControls.scss
+++ b/src/Components/BottomNav/PlayerControls.scss
@@ -14,6 +14,9 @@
     margin: 0 1rem 0 1rem;
     font-size: 1.2rem;
     color: $bc-gray;
+    min-width: 3rem;
+    display: flex;
+    justify-content: center;
   }
 
 
