--- a/src/Components/BCSpotlightItem/BCSpotlightItem.scss
+++ b/src/Components/BCSpotlightItem/BCSpotlightItem.scss
@@ -10,12 +10,10 @@
   align-self: center;
   margin-bottom: 8rem;
   width: 1100px;
+  min-height: 50rem;
 
   @media (max-width: $tablet-width) {
     width: 100%;
-    // min-width: 950px;
-    // border: 2px solid red;
-    // top: 60px;
   }
 
   grid-template-columns: 1fr 1fr;
