--- a/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
+++ b/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
@@ -1,4 +1,4 @@
-@import '../../globals.scss';
+@import "../../globals.scss";
 
 .BCWeeklyTracklist {
   // margin-top: 30px;
@@ -6,15 +6,14 @@
   .BCWeeklyTracklist-item {
     letter-spacing: -0.4px;
     opacity: 0.8;
-    position: relative;    
+    position: relative;
 
     &:hover {
-      opacity: 1.0;
+      opacity: 1;
       cursor: pointer;
     }
     @include bc-text();
     padding: 10px;
-    
 
     .BCWeeklyTracklist-track-info {
       padding: 3px;
@@ -33,6 +32,13 @@
       font-size: 12px;
       color: $bc-gray;
     }
+  }
+}
 
+.spotlight {
+  overflow: auto;
+  max-height: 48rem;
+  &:hover {
+    overflow-y: scroll;
   }
 }
