--- a/src/Components/ShareButton/ShareButton.scss
+++ b/src/Components/ShareButton/ShareButton.scss
@@ -11,7 +11,10 @@
   transform: translate(-50%, -50%);
   top: 160%;
   
-
+  .ShareButton-icon {
+    margin-bottom: 0.5rem;
+  }
+  
   &:hover {
     .ShareButton-text {
       color: $bc-pink;
