--- a/src/Components/BCModal/BCModal.scss
+++ b/src/Components/BCModal/BCModal.scss
@@ -11,19 +11,17 @@
   z-index: 100;
 
   .BCModal-content {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-around;
     background-color: #fff;
     border-radius: 3px;
     max-width: 600px;
     min-height: 240px;
     margin: 0px;
-    // padding: 30px;
     position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+
 
     .BCModal-close-icon {
       position: absolute;
@@ -87,6 +85,9 @@
           font-size: 1.2rem;
         }
       }
+    }
+    @media (max-width: $phone-width) {
+      width: 85%;
     }
   }
 }
