--- a/src/Components/BCModal/BCModal.scss
+++ b/src/Components/BCModal/BCModal.scss
@@ -21,8 +21,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-
-
     .BCModal-close-icon {
       position: absolute;
       width: 1.4rem;
@@ -61,11 +59,15 @@
         .BCModal-url {
           font-size: 1.6rem;
           color: $bc-gray;
-          width: 460px;
+          // width: 460px;
           border-radius: 2px 0px 0px 2px;
-
+          width: 70%;
           border: none;
           padding-left: 20px;
+          @media (max-width: $phone-width) {
+            display: none;
+          }
+          
           &:hover {
             cursor: default;
           }
@@ -73,16 +75,25 @@
 
         .BCModal-button {
           border: none;
+
+          &:hover {
+            cursor: pointer;
+          }
+
           &:focus {
             outline: none;
           }
           background: $bc-pink;
-          width: 120px;
+          width: 30%;
+          // width: 120px;
           height: inherit;
           border-radius: 0px 2px 2px 0px;
           letter-spacing: 3px;
           color: $bc-white;
           font-size: 1.2rem;
+          @media (max-width: $phone-width) {
+            width: 100%;
+          }
         }
       }
     }
