pretty hover pink icon for sharing

--- a/src/Components/ShareButton/ShareButton.scss
+++ b/src/Components/ShareButton/ShareButton.scss
@@ -19,6 +19,9 @@
     .ShareButton-text {
       color: $bc-pink;
     }
+    .ShareButton-icon {
+      color: $bc-pink;
+    }
   }
 
   .ShareButton-text {
