--- a/src/Components/BCModal/BCModal.scss
+++ b/src/Components/BCModal/BCModal.scss
@@ -57,13 +57,14 @@
         height: 5.2rem;
         display: flex;
         .BCModal-url {
+          border-radius: 2px 0px 0px 2px;
+          border: none;
+          height: inherit;
+
           font-size: 1.6rem;
           color: $bc-gray;
-          // width: 460px;
-          border-radius: 2px 0px 0px 2px;
           width: 70%;
-          border: none;
-          padding-left: 20px;
+          padding: 0px 0px 0px 20px;
           @media (max-width: $phone-width) {
             display: none;
           }
@@ -75,6 +76,8 @@
 
         .BCModal-button {
           border: none;
+          border-radius: 0px 2px 2px 0px;
+          height: inherit;
 
           &:hover {
             cursor: pointer;
@@ -85,9 +88,6 @@
           }
           background: $bc-pink;
           width: 30%;
-          // width: 120px;
-          height: inherit;
-          border-radius: 0px 2px 2px 0px;
           letter-spacing: 3px;
           color: $bc-white;
           font-size: 1.2rem;
