--- a/src/Components/BCProgressiveImage/BCProgressiveImage.scss
+++ b/src/Components/BCProgressiveImage/BCProgressiveImage.scss
@@ -11,12 +11,19 @@
 }
 
 .BCProgressiveImage {
-    width: 100%;
-    height: 100%;
-  .BCProgressiveImage-img {
-    width: 100%;
-    height: auto;
-    border-radius: 4px;
-    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
-  }
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+      box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+
 }
+// .BCProgressiveImage {
+//     width: 100%;
+//     height: 100%;
+//   .BCProgressiveImage-img {
+//     width: 100%;
+//     height: auto;
+//     border-radius: 4px;
+//     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+//   }
+// }
