--- a/src/Components/CollectionModal/CollectionModal.scss
+++ b/src/Components/CollectionModal/CollectionModal.scss
@@ -12,32 +12,41 @@
   z-index: 100;
 
   .CollectionModal-content {
-    padding: 0 32px 0 32px;
     background-color: $bc-black-1;
 
-    border-top: 1px solid white;
+    // border-top: 1px solid white;
     overflow: auto;
-    max-height: 48rem;
 
     border-radius: 3px;
-    max-width: 600px;
-    min-height: 240px;
     margin: 0px;
     position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    // border: 1px solid white;
+    height: -moz-available;          /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    height: fill-available;
 
-    .CollectionModal-explore-more {
-      width: 280px;
-      height: 52px;
-      border-radius: 26px;
-      background-color: #6255ff;
-      border: none;
+    .CollectionModal-content-top {
 
-      @include bc-text(600);
-      font-size: 1.2rem;
-      letter-spacing: 3px;
+    }
+
+    .CollectionModal-explore-more-container {
+      display: flex;
+      justify-content: center;
+
+      .CollectionModal-explore-more {
+        width: 280px;
+        height: 52px;
+        border-radius: 26px;
+        background-color: #6255ff;
+        border: none;
+
+        @include bc-text(600);
+        font-size: 1.2rem;
+        letter-spacing: 3px;
+      }
     }
 
     .CollectionModal-close-icon-container {
@@ -56,7 +65,9 @@
       }
     }
 
-    .CollectionModal-content-top {
+    .CollectionModal-content-middle {
+      padding: 0 32px 0 32px;
+
       .CollectionModal-cover-text {
         @include bc-text();
         text-align: center;
@@ -66,7 +77,7 @@
         h4 {
           margin: 0.7rem;
         }
-        
+
         .CollectionModal-line {
           width: 15px;
           height: 1px;
@@ -75,7 +86,7 @@
         }
       }
 
-      margin-top: 8rem;
+      margin-top: 4rem;
       .CollectionModal-image-container {
         margin: 2rem 0 2rem 0;
       }
@@ -85,6 +96,10 @@
         color: $bc-gray;
         font-weight: 600;
       }
+    }
+
+    .CollectionModal-content-bottom {
+      padding: 0 32px 1rem 32px;
     }
 
     @media (max-width: $phone-width) {
