--- a/src/Components/CollectionModal/CollectionModal.scss
+++ b/src/Components/CollectionModal/CollectionModal.scss
@@ -55,8 +55,8 @@
       display: flex;
       justify-content: center;
       background-color: rgba(255, 255, 255, 0.1);
-      width: 32px;
-      height: 32px;
+      width: 4rem;
+      height: 4rem;
       border-radius: 100px;
       top: 3rem;
       right: 3rem;
@@ -99,7 +99,7 @@
     }
 
     .CollectionModal-content-bottom {
-      padding: 0 32px 1rem 32px;
+      padding: 0 32px 10rem 32px;
     }
 
     @media (max-width: $phone-width) {
