--- a/src/index.scss
+++ b/src/index.scss
@@ -11,10 +11,10 @@ html {
   font-size: 10px;
 }
 
-.modal-open {
-  overflow: hidden !important;
-  width: 100%;
-}
+// .modal-open {
+//   overflow: hidden !important;
+//   width: 100%;
+// }
 
 p,
 span {
