--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -45,6 +45,7 @@
       align-items: center;
       height: 120px;
       margin-top: 1rem;
+      padding-top: 2rem;
       // justify-content: space-evenly;
       flex-direction: column;
 
