deleted old useless shit.

--- a/src/Components/CollectionDetail/CollectionDetail.scss
+++ b/src/Components/CollectionDetail/CollectionDetail.scss
@@ -38,7 +38,7 @@
     // height: fill-available;
 
     .CollectionDetail-content-top {
-
+      height: 100px;
     }
 
     .CollectionDetail-explore-more-container {
