added playbutton to collection detail

--- a/src/Components/CollectionDetail/CollectionDetail.scss
+++ b/src/Components/CollectionDetail/CollectionDetail.scss
@@ -78,6 +78,13 @@
 
       .CollectionDetail-image-container {
         margin: 2rem 0 2rem 0;
+        position: relative;
+        .CollectionDetail-play-button-container {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
 
       .CollectionDetail-MainText {
