made feedback purple, changed copy. Make album full width in unmodal

--- a/src/Components/CollectionDetail/CollectionDetail.scss
+++ b/src/Components/CollectionDetail/CollectionDetail.scss
@@ -56,7 +56,7 @@
     }
 
     .CollectionDetail-content-middle {
-      padding: 0 16px 0 16px;
+      padding: 0 1rem 0 1rem;
 
       .CollectionDetail-cover-text {
         @include bc-text();
