switch to Poppins (instead of Sofia Pro) for now

--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -50,6 +50,7 @@
       flex-direction: column;
 
       .SplashBanner-message-header {
+        font-weight: 900;
         font-size: 3rem;
       }
 
