--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -13,7 +13,11 @@
   .Footer-right {
    a {
      color: $bc-pink;
+     opacity: 0.9;
      text-decoration: underline;
+     &:hover {
+       opacity: 1;
+     }
    }
   }
 
