--- a/src/Components/BCWeeklyItem/BCWeeklyItem.scss
+++ b/src/Components/BCWeeklyItem/BCWeeklyItem.scss
@@ -16,22 +16,48 @@
   .BCWeeklyItem-cover {
     position: relative;
 
+    // max-width: 100%;
+    // margin: auto;
+
+    &::after {
+      display: block;
+      position: relative;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000);
+      margin-top: -150px;
+      height: 150px;
+      width: 100%;
+      content: "";
+    }
+
     .BCWeeklyItem-cover-text {
       transition: $transition;
+      .BCWeeklyItem-cover-text-title {
+        font-weight: bold;
+        font-size: 2rem;
+        line-height: 1.3;
+        letter-spacing: normal;
+        
+      }
+      .BCWeeklyItem-cover-text-subtitle {
+        line-height: 1.33;
+        color: $bc-gray;
+        letter-spacing: normal;
+        font-size: 1.2rem;
+      }
     }
     .BCWeeklyItem-cover-image {
       transition: $transition;
     }
 
     @include hover-supported() {
-     cursor: pointer;
+      cursor: pointer;
       .BCWeeklyItem-cover-image {
         opacity: 0.1;
       }
 
       .BCWeeklyItem-cover-text {
         opacity: 1;
-      } 
+      }
     }
 
     .BCWeeklyItem-cover-image {
@@ -44,18 +70,22 @@
     .BCWeeklyItem-cover-text {
       @include bc-text();
       position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      width: 100%;
+      // left: 50%;
+      // top: 50%;
+      padding: 2rem;
+      z-index: 100;
+      bottom: 0;
+      // transform: translate(-50%, -50%);
+      // text-align: center;
+      // width: 100%;
       letter-spacing: 2.1px;
 
       .BCWeeklyItem-line {
-        width: 15px;
-        height: 2px;
+        width: 2.5rem;
+        width: 1.5rem;
+        height: 0.2rem;
+        margin: .5rem 0 .5rem 0;
         background: $bc-pink;
-        margin: auto;
       }
     }
   }
