--- a/src/Components/CollectionDetail/CollectionDetail.scss
+++ b/src/Components/CollectionDetail/CollectionDetail.scss
@@ -8,6 +8,7 @@
 
 .CollectionDetail {
   background-color: $bc-black-1;
+  position: relative;
 
   .CollectionDetail-content {
     background-color: $bc-black-1;
@@ -48,8 +49,9 @@
       width: 4rem;
       height: 4rem;
       border-radius: 100px;
-      top: 3rem;
-      right: 3rem;
+      right: 0;
+      // top: 3rem;
+      // right: 3rem;
       &:hover {
         cursor: pointer;
       }
