fixed bag bugs n stuff, redid playlist grid

--- a/src/Components/Wrapper/Wrapper.scss
+++ b/src/Components/Wrapper/Wrapper.scss
@@ -5,7 +5,8 @@
   margin-bottom: 50px;
   flex-direction: column;
   display: flex;
-  max-width: $desktop-width;
+  // max-width: $desktop-width;
+  width: $desktop-width;
 
   @media (max-width: $phone-width) {
     margin: auto 20px;
