--- a/src/Components/BCWeeklyList/BCWeeklyList.scss
+++ b/src/Components/BCWeeklyList/BCWeeklyList.scss
@@ -9,19 +9,22 @@ $grid-spacing: 2rem;
 .BCWeeklyList {
   .BCWeeklyList-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-items: center;
-    justify-content: center;
+    // grid-template-columns: 1fr 1fr 1fr 1fr;
+    // grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+    // justify-items: center;
+    // justify-content: center;
     grid-row-gap: $grid-spacing;
     grid-column-gap: $grid-spacing;
     
-    @media (max-width: $tablet-width) { 
-      grid-template-columns: 1fr 1fr 1fr;
-    }
+    // @media (max-width: $tablet-width) { 
+    //   grid-template-columns: 1fr 1fr 1fr;
+    // }
 
-    @media (max-width: $phone-width) { 
-      grid-template-columns: 1fr;
-    }
+    // @media (max-width: $phone-width) { 
+    //   grid-template-columns: 1fr;
+    // }
     
   }
 }
