--- a/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
+++ b/src/Components/BCWeeklyTracklist/BCWeeklyTracklist.scss
@@ -3,8 +3,9 @@
 .BCWeeklyTracklist {
   // margin-top: 30px;
 
-  .BCWeeklyTracklist-item {
+  .BCWeeklyTracklist-item-container {
     letter-spacing: -0.4px;
+    padding: 0.8rem 0;
     opacity: 0.8;
     position: relative;
 
@@ -13,7 +14,6 @@
       cursor: pointer;
     }
     @include bc-text();
-    padding: 10px;
 
     .BCWeeklyTracklist-track-info {
       padding: 2px;
